[tool.poetry]
name = "project-fenaverat"
version = "0.1.0"
description = ""
authors = ["lxRxRbckl <lxrbckl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxrbckl = "^3.1.0"
dash-player = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
